--- a/page1.html
+++ b/page1.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!--nav bar-->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-info navbar-dark ">
       <a class="navbar-brand" href=".">My Website</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -35,9 +35,17 @@
         </ul>
       </div>  
     </nav>
-    
-    <!--page content-->
-    <h1>Page 1</h1>
+    <div class="jumbotron">
+		<div class="spinner-grow-sm text-muted"></div>
+		<div class="spinner-border text-primary"></div>
+		<div class="spinner-grow text-success"></div>
+		<div class="spinner-border-sm text-info"></div>
+		<div class="spinner-grow text-warning"></div>
+		<div class="spinner-border text-danger"></div>
+		<div class="spinner-grow-sm text-secondary"></div>
+		<div class="spinner-border text-dark"></div>
+		<div class="spinner-grow text-light"></div
+	</div>
     
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
