--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!--nav bar-->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-info navbar-dark">
       <a class="navbar-brand" href=".">My Website</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,10 @@
     
     <!--page content-->
     <h1>Page 2</h1>
-    
+   
+
+	
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
